test/classes/initializers/errors/lhsInitRhsCons.good
lhsInitRhsCons.chpl:12: note: Constructors have been deprecated as of Chapel 1.18. Please use initializers instead.
lhsInitRhsCons.chpl:12: warning: Type 'hasConstruct' defines a constructor here
lhsInitRhsCons.chpl:18: error: type mismatch in assignment from unmanaged hasConstruct to unmanaged hasInit
